# peyote

./: README.md  meson-post-install.py  meson.build
data/: PKGBUILD  example.pey  meson.build  org.github.FreaxMATE.peyote.appdata.xml  org.github.FreaxMATE.peyote.desktop  org.github.FreaxMATE.peyote.glade  org.github.FreaxMATE.peyote.glade~  org.github.FreaxMATE.peyote.gschema.xml
data/icons/: meson.build
src/: main.c  meson.build  peyote-application.c  peyote-application.h  peyote-dialog.c  peyote-dialog.h  peyote-export-dialog.c  peyote-export-dialog.h  peyote-file-parser.c  peyote-file-parser.h  peyote-file.c  peyote-file.h  peyote-filechooser.c  peyote-filechooser.h  peyote-files.c  peyote-files.h  peyote-menu.c  peyote-menu.h  peyote-metadata-dialog.c  peyote-metadata-dialog.h  peyote-render.c  peyote-render.h  peyote-tab.c  peyote-tab.h  peyote-tabs.c  peyote-tabs.h  peyote-window.c  peyote-window.h  peyote.h
